<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_MarkDefinition" Id="{42950c73-347e-4e7c-859f-806b1921cf57}">
    <Declaration><![CDATA[TYPE ST_MarkDefinition :
STRUCT
  nId : UDINT;            // mark id (array index)
  fHeight : LREAL;        // [m] mark height (size Y)
  fTrLength : LREAL;      // [m] triangle lenght
  fSqLength : LREAL;      // [m] square length ( square + triangle lengh = sizeX)
  fPosX : LREAL;          // [m] position X offset from 0/0
  fPosY : LREAL;          // [m] position Y offset from 0/0
  bInvertedX : BOOL;      // flipped in X axis (prior bMarksInverted)
  //bInvertedY : BOOL;      // flipped in Y axis
  //state
  sState : ST_MarkState;  // mark detection state
END_STRUCT 
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>