<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="ST_MarkState" Id="{fe40cc35-4cac-48de-9abe-5277a8eefd33}">
    <Declaration><![CDATA[TYPE ST_MarkState :
STRUCT
  bSet        : BOOL;     // mark was set & valid (detected)
  bMissed     : BOOL;     // mark was internally generated
  bInArea     : BOOL;     // mark withing ok area
  dx          : LREAL;    // x displacement [m]
  dy          : LREAL;    // y displacement [m]
  fLengthReal : LREAL;    // real detected mark length [m]
  nPosXReal   : DINT;     // detected position X absolute [SubPx]
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>